Update contact information in terms of service

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -92,7 +92,7 @@
     <p>UGSRC may update these Terms from time to time. Updates will be posted on this page with a revised "Last Updated" date. Continued use of the App constitutes acceptance of the updated Terms.</p>
 
     <h2>11. Contact Information</h2>
-    <p>If you have questions about these Terms, please contact the SRC administration via email: <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a>.</p>
+    <p>If you have questions about these Terms, please contact the developer via email: <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a>.</p>
 
     <h2>12. Deleting Your Account</h2>
     <p>Users can request account deletion at any time. Account deletion requests can be submitted by sending an email to <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a> or using the "Request Account Deletion" feature in the App. Deleted accounts will have personal data removed according to our Privacy Policy.</p>
