Update eligibility age and app reference in terms

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -28,7 +28,7 @@
     <p>By using the UGSRC mobile application ("App"), you agree to comply with and be bound by these Terms of Service ("Terms"). If you do not agree, please do not use the App.</p>
 
     <h2>2. Eligibility</h2>
-    <p>The App is intended for students of the University of Ghana who are 18 years of age or older. By registering, you confirm that you meet these eligibility requirements.</p>
+    <p>The App is intended for students of the University of Ghana who are 16 years of age or older. By registering, you confirm that you meet these eligibility requirements.</p>
 
     <h2>3. Account Responsibilities</h2>
     <p>When creating an account, you agree to:</p>
@@ -97,7 +97,7 @@
     <h2>12. Deleting Your Account</h2>
     <p>Users can request account deletion at any time. Account deletion requests can be submitted by sending an email to <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a> or using the "Request Account Deletion" feature in the App. Deleted accounts will have personal data removed according to our Privacy Policy.</p>
 
-    <p>Thank you for using UGSRC!</p>
+    <p>Thank you for using the UGSRC App!</p>
   </div>
 </body>
 </html>
