Fix HTML formatting in delete-account.html

--- a/delete-account.html
+++ b/delete-account.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Request Account Deletion – UGSRC App</title>
-  <meta name="description" content="Request deletion of your UGSRC App account and associated personal data." />
+  <meta name="description" content="Request deletion of your UGSRC App account and associated personal data.">
   <style>
     :root {
       --primary: #2563eb;
@@ -46,6 +46,15 @@
       font-size: 28px;
       margin-bottom: 12px;
       letter-spacing: -0.02em;
+      color: var(--text);
+    }
+
+    h2 {
+      font-size: 20px;
+      margin-top: 32px;
+      margin-bottom: 12px;
+      color: var(--text);
+      font-weight: 600;
     }
 
     p {
@@ -65,6 +74,15 @@
 
     li {
       margin-bottom: 8px;
+    }
+
+    a {
+      color: var(--primary);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
 
     .divider {
@@ -87,6 +105,7 @@
 
     .button:hover {
       opacity: 0.9;
+      text-decoration: none;
     }
 
     footer {
