--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,103 +1,192 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UGSRC Terms of Service</title>
-  <link rel="stylesheet" href="styles.css"> <!-- optional, use your CSS -->
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; background-color: #f9f9f9; color: #111; }
-    .container { max-width: 800px; margin: auto; padding: 24px; }
-    h1, h2 { color: #1a73e8; }
-    h1 { margin-bottom: 16px; }
-    h2 { margin-top: 24px; margin-bottom: 12px; }
-    p { margin-bottom: 12px; }
-    ul { margin-left: 20px; margin-bottom: 12px; }
-    a { color: #1a73e8; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    .last-updated { font-size: 0.9em; color: #666; margin-bottom: 24px; }
+    :root {
+      --primary: #2563eb;
+      --danger: #dc2626;
+      --text: #111827;
+      --muted: #6b7280;
+      --bg: #f9fafb;
+      --card: #ffffff;
+      --border: #e5e7eb;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 40px 20px 64px;
+    }
+
+    .card {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 16px;
+      padding: 32px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
+    }
+
+    h1 {
+      font-size: 28px;
+      margin-bottom: 12px;
+      letter-spacing: -0.02em;
+      color: var(--text);
+    }
+
+    h2 {
+      font-size: 20px;
+      margin-top: 32px;
+      margin-bottom: 12px;
+      color: var(--text);
+      font-weight: 600;
+    }
+
+    p {
+      margin: 12px 0;
+      color: var(--text);
+    }
+
+    .muted {
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    ul {
+      padding-left: 20px;
+      margin: 16px 0;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    a {
+      color: var(--primary);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .divider {
+      height: 1px;
+      background: var(--border);
+      margin: 32px 0;
+    }
+
+    footer {
+      margin-top: 32px;
+      text-align: center;
+      font-size: 13px;
+      color: var(--muted);
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>UGSRC Terms of Service</h1>
-    <p class="last-updated">Last Updated: January 30, 2026</p>
+  <main class="container">
+    <section class="card">
+      <h1>UGSRC Terms of Service</h1>
+      <p class="muted">Last Updated: January 30, 2026</p>
 
-    <h2>1. Acceptance of Terms</h2>
-    <p>By using the UGSRC mobile application ("App"), you agree to comply with and be bound by these Terms of Service ("Terms"). If you do not agree, please do not use the App.</p>
+      <div class="divider"></div>
 
-    <h2>2. Eligibility</h2>
-    <p>The App is intended for students of the University of Ghana who are 16 years of age or older. By registering, you confirm that you meet these eligibility requirements.</p>
+      <h2>1. Acceptance of Terms</h2>
+      <p>By using the UGSRC mobile application ("App"), you agree to comply with and be bound by these Terms of Service ("Terms"). If you do not agree, please do not use the App.</p>
 
-    <h2>3. Account Responsibilities</h2>
-    <p>When creating an account, you agree to:</p>
-    <ul>
-      <li>Provide accurate and current information.</li>
-      <li>Maintain the confidentiality of authentication credentials.</li>
-      <li>Be responsible for all activity on your account.</li>
-    </ul>
+      <h2>2. Eligibility</h2>
+      <p>The App is intended for students of the University of Ghana who are 16 years of age or older. By registering, you confirm that you meet these eligibility requirements.</p>
 
-    <h2>4. Acceptable Use</h2>
-    <p>You agree not to:</p>
-    <ul>
-      <li>Engage in abusive, harassing, or illegal behavior.</li>
-      <li>Use the App to impersonate others or misrepresent identity.</li>
-      <li>Attempt to access restricted areas or compromise the App's security.</li>
-      <li>Upload or share harmful, offensive, or copyrighted content without permission.</li>
-    </ul>
+      <h2>3. Account Responsibilities</h2>
+      <p>When creating an account, you agree to:</p>
+      <ul>
+        <li>Provide accurate and current information.</li>
+        <li>Maintain the confidentiality of authentication credentials.</li>
+        <li>Be responsible for all activity on your account.</li>
+      </ul>
 
-    <h2>5. AI Assistant (Ujamaa)</h2>
-    <p>The App includes an AI assistant ("Ujamaa") powered by OpenAI GPT-4. Users should note that:</p>
-    <ul>
-      <li>Responses are based on official university content and trusted sources.</li>
-      <li>The AI may occasionally provide incomplete or inaccurate responses.</li>
-      <li>No personally identifying information beyond your questions is sent to OpenAI.</li>
-      <li>Chat history can be deleted at any time from your account.</li>
-    </ul>
+      <h2>4. Acceptable Use</h2>
+      <p>You agree not to:</p>
+      <ul>
+        <li>Engage in abusive, harassing, or illegal behavior.</li>
+        <li>Use the App to impersonate others or misrepresent identity.</li>
+        <li>Attempt to access restricted areas or compromise the App's security.</li>
+        <li>Upload or share harmful, offensive, or copyrighted content without permission.</li>
+      </ul>
 
-    <h2>6. Third-Party Services</h2>
-    <p>The App integrates with external services for specific functionality, including:</p>
-    <ul>
-      <li><strong>PascoHub:</strong> Provides access to past exam questions. Managed independently; UGSRC is not responsible for its content or policies.</li>
-      <li><strong>Supabase:</strong> Authentication, database, storage, and real-time subscriptions.</li>
-      <li>Other services: OpenAI, Railway, Mailgun, etc.</li>
-    </ul>
+      <h2>5. AI Assistant (Ujamaa)</h2>
+      <p>The App includes an AI assistant ("Ujamaa") powered by OpenAI GPT-4. Users should note that:</p>
+      <ul>
+        <li>Responses are based on official university content and trusted sources.</li>
+        <li>The AI may occasionally provide incomplete or inaccurate responses.</li>
+        <li>No personally identifying information beyond your questions is sent to OpenAI.</li>
+        <li>Chat history can be deleted at any time from your account.</li>
+      </ul>
 
-    <h2>7. User-Generated Content</h2>
-    <p>Users may submit content via polls, blogs, comments, and feedback. By submitting content, you:</p>
-    <ul>
-      <li>Grant UGSRC a license to use, display, and distribute it within the App.</li>
-      <li>Represent that you have the right to submit such content.</li>
-      <li>Agree not to post content that is offensive, illegal, or violates others' rights.</li>
-    </ul>
+      <h2>6. Third-Party Services</h2>
+      <p>The App integrates with external services for specific functionality, including:</p>
+      <ul>
+        <li><strong>PascoHub:</strong> Provides access to past exam questions. Managed independently; UGSRC is not responsible for its content or policies.</li>
+        <li><strong>Supabase:</strong> Authentication, database, storage, and real-time subscriptions.</li>
+        <li>Other services: OpenAI, Railway, Mailgun, etc.</li>
+      </ul>
 
-    <h2>8. Account Suspension and Termination</h2>
-    <p>UGSRC reserves the right to suspend or terminate accounts that:</p>
-    <ul>
-      <li>Violate these Terms.</li>
-      <li>Engage in abusive or fraudulent activity.</li>
-      <li>Pose a security risk or legal concern.</li>
-    </ul>
+      <h2>7. User-Generated Content</h2>
+      <p>Users may submit content via polls, blogs, comments, and feedback. By submitting content, you:</p>
+      <ul>
+        <li>Grant UGSRC a license to use, display, and distribute it within the App.</li>
+        <li>Represent that you have the right to submit such content.</li>
+        <li>Agree not to post content that is offensive, illegal, or violates others' rights.</li>
+      </ul>
 
-    <h2>9. Limitation of Liability</h2>
-    <p>The App is provided "as-is" and "as available." UGSRC and its affiliates are not liable for:</p>
-    <ul>
-      <li>Any indirect, incidental, or consequential damages.</li>
-      <li>Errors, omissions, or inaccuracies in the App or AI assistant.</li>
-      <li>Data loss or unauthorized access to accounts.</li>
-    </ul>
+      <h2>8. Account Suspension and Termination</h2>
+      <p>UGSRC reserves the right to suspend or terminate accounts that:</p>
+      <ul>
+        <li>Violate these Terms.</li>
+        <li>Engage in abusive or fraudulent activity.</li>
+        <li>Pose a security risk or legal concern.</li>
+      </ul>
 
-    <h2>10. Changes to Terms</h2>
-    <p>UGSRC may update these Terms from time to time. Updates will be posted on this page with a revised "Last Updated" date. Continued use of the App constitutes acceptance of the updated Terms.</p>
+      <h2>9. Limitation of Liability</h2>
+      <p>The App is provided "as-is" and "as available." UGSRC and its affiliates are not liable for:</p>
+      <ul>
+        <li>Any indirect, incidental, or consequential damages.</li>
+        <li>Errors, omissions, or inaccuracies in the App or AI assistant.</li>
+        <li>Data loss or unauthorized access to accounts.</li>
+      </ul>
 
-    <h2>11. Contact Information</h2>
-    <p>If you have questions about these Terms, please contact the developer via email: <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a>.</p>
+      <h2>10. Changes to Terms</h2>
+      <p>UGSRC may update these Terms from time to time. Updates will be posted on this page with a revised "Last Updated" date. Continued use of the App constitutes acceptance of the updated Terms.</p>
 
-    <h2>12. Deleting Your Account</h2>
-    <p>Users can request account deletion at any time. Account deletion requests can be submitted by sending an email to <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a> or using the "Request Account Deletion" feature in the App. Deleted accounts will have personal data removed according to our Privacy Policy.</p>
+      <h2>11. Contact Information</h2>
+      <p>If you have questions about these Terms, please contact the developer via email: <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a>.</p>
 
-    <p>Thank you for using the UGSRC App!</p>
-  </div>
+      <h2>12. Deleting Your Account</h2>
+      <p>Users can request account deletion at any time. Account deletion requests can be submitted by sending an email to <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a> or using the "Request Account Deletion" feature in the App. Deleted accounts will have personal data removed according to our Privacy Policy.</p>
+
+      <div class="divider"></div>
+
+      <p style="text-align: center;">Thank you for using UGSRC!</p>
+    </section>
+
+    <footer>
+      © 2026 UGSRC App. All rights reserved.
+    </footer>
+  </main>
 </body>
 </html>
