Update title in terms of service document

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -101,7 +101,7 @@
 <body>
   <main class="container">
     <section class="card">
-      <h1>UGSRC Terms of Service</h1>
+      <h1>UGSRC App Terms of Service</h1>
       <p class="muted">Last Updated: January 30, 2026</p>
 
       <div class="divider"></div>
