Update contact information in privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -305,7 +305,7 @@
       <div class="divider"></div>
 
       <p class="muted">
-        For questions about this policy, please contact the SRC administration.
+        For questions about this policy, please contact the developer via email at <a href="mailto:gabrieladjeiboye@gmail.com">gabrieladjeiboye@gmail.com</a>.
       </p>
     </section>
 
