Update thank you message in terms of service

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -181,7 +181,7 @@
 
       <div class="divider"></div>
 
-      <p style="text-align: center;">Thank you for using UGSRC!</p>
+      <p style="text-align: center;">Thank you for using the UGSRC app!</p>
     </section>
 
     <footer>
