--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UGSRC Terms of Service</title>
+  <title>UGSRC App Terms of Service</title>
   <style>
     :root {
       --primary: #2563eb;
